// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutate immediately 1`] = `
<DocumentFragment>
  <div>
    2
  </div>
</DocumentFragment>
`;

exports[`provider initialize 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`provider initialize 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    2
  </div>
</DocumentFragment>
`;

exports[`rerender on dependency update 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`rerender on dependency update 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    2
  </div>
</DocumentFragment>
`;

exports[`without decorator 1`] = `
<DocumentFragment>
  <div>
    1
  </div>
</DocumentFragment>
`;
